...

        <Button
            android:id="@+id/assgin"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button69"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button23"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button39"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button70"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button40"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button48"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button71"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button52"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button53"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button51"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button68"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button28"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button55"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button37"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button75"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button63"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button65"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...
            android:textColor="#FFFFFF"
            android:backgroundTint="#8A8A8A"
            android:text="del"
            android:layout_row="4"
            android:textStyle="bold"
...

        <Button
            android:id="@+id/button64"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button67"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button73"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button9"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
...
            android:backgroundTint="#8A8A8A"

            android:text="sin"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
...

        <Button
            android:id="@+id/button35"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...
            android:layout_margin="2dp"
            android:backgroundTint="#8A8A8A"
            android:text="cos"
            android:textColor="#FFFFFF"

...

        <Button
            android:id="@+id/button31"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="#8A8A8A"
            android:text="tan"
            android:textColor="#FFFFFF"
            android:layout_row="1"
...

        <Button
            android:id="@+id/button21"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button5"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button26"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...
            android:layout_margin="2dp"
            android:backgroundTint="#8A8A8A"
            android:text="lg"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
...

        <Button
            android:id="@+id/button25"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button10"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button32"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/ln"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button666"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
...
